validate best random forest on test set

--- a/lab_3.ipynb
+++ b/lab_3.ipynb
@@ -1432,6 +1432,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "53249.8776513639"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# lets validate the best random forest model with the test set\n",
+    "# using these hyperparameters {'bootstrap': False, 'max_depth': None, 'max_features': 7, 'min_samples_leaf': 3, 'min_samples_split': 5, 'n_estimators': 154}\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "final_model = RandomForestRegressor(n_estimators=154, min_samples_split=5, min_samples_leaf=3, max_features=7, max_leaf_nodes=None, bootstrap=False)\n",
+    "\n",
+    "# prepare the test set\n",
+    "X_test = strat_test_set.drop(\"median_house_value\", axis=1)\n",
+    "y_test = strat_test_set[\"median_house_value\"].copy()\n",
+    "\n",
+    "X_test_prepared = full_pipeline.transform(X_test)\n",
+    "\n",
+    "# Perform 5-fold cross-validation\n",
+    "final_scores = cross_val_score(final_model, X_test_prepared, y_test, scoring=\"neg_mean_squared_error\", cv=5)\n",
+    "final_rmse_scores = np.sqrt(-final_scores)\n",
+    "\n",
+    "final_rmse = final_rmse_scores.mean()\n",
+    "final_rmse\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 156,
    "metadata": {},
    "outputs": [
